# language-type_inferer

./: .gitignore  README.md  adt.ml  ast.cmi  ast.cmo  ast.ml  dune  dune-project  example.typed  infer_type.cmi  infer_type.cmo  infer_type.ml  lexer.mll  main.ml  parser.cmi  parser.cmo  parser.ml  parser.mli  parser.mly  rtpl.ml  stdlib.typed  unifier.cmi  unifier.cmo  unifier.ml  utils.ml  values.cmi  values.cmo  values.ml
parser/: parser.ml  parser.mli
