(lang dune 3.16)

(name type_system)

(generate_opam_files true)

(source
 (github Dominik-Pawelec/language-type_inferer))

(authors "Dominik Pawelec")

(maintainers "Dominik Pawelec")

(license WorkInProgress)

(documentation TODO)

(package
 (name type_system)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
